# PedroTube

./: README.md  app.py  pyproject.toml
static/: style.css
templates/: down.html  play.html
