[tool.poetry]
name = "download"
version = "0.1.0"
description = ""
authors = ["pedrozau <pedrozau28@gmail.com>"]
license = "Mit"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pytube = "^12.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
